--- a/NUnitTests/NUnitTests.fsproj
+++ b/NUnitTests/NUnitTests.fsproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="UnitTest1.fs"/>
-    <Compile Include="Program.fs"/>
+    <Compile Include="UnitTest1.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +18,14 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="OneScript" Version="2.0.0-rc.8" />
+    <PackageReference Include="OneScript.CoreLib" Version="2.0.0-rc.8" />
+    <PackageReference Include="OneScript.Hosting" Version="2.0.0-rc.8" />
+    <PackageReference Include="OneScript.StandardLibrary" Version="2.0.0-rc.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OsComponentFSharp\OsComponentFSharp.fsproj" />
   </ItemGroup>
 
 </Project>
